snapshots/serde/serde/src/test__lib.rs.snap
---
source: tests/test.rs
expression: funcspace_struct
---
FuncSpace {
    name: None,
    start_line: 1,
    end_line: 349,
    kind: Unit,
    spaces: [],
    metrics: CodeMetrics {
        nargs: Stats {
            fn_nargs: 0,
            closure_nargs: 0,
            fn_nargs_sum: 0,
            closure_nargs_sum: 0,
            fn_nargs_min: 0,
            closure_nargs_min: 0,
            fn_nargs_max: 0,
            closure_nargs_max: 0,
            total_functions: 0,
            total_closures: 0,
        },
        nexits: Stats {
            exit: 0,
            exit_sum: 0,
            total_space_functions: 0,
            exit_min: 0,
            exit_max: 0,
        },
        cognitive: Stats {
            structural: 0,
            structural_sum: 0,
            structural_min: 0,
            structural_max: 0,
            nesting: 0,
            total_space_functions: 0,
            boolean_seq: BoolSequence {
                boolean_op: None,
            },
        },
        cyclomatic: Stats {
            cyclomatic_sum: 1.000,
            cyclomatic: 1.000,
            n: 1,
            cyclomatic_max: 1.000,
            cyclomatic_min: 1.000,
        },
        halstead: Stats {
            u_operators: 11,
            operators: 380,
            u_operands: 205,
            operands: 604,
        },
        loc: Stats {
            sloc: Sloc {
                start: 0,
                end: 349,
                unit: tru,
                sloc_min: 349,
                sloc_max: 349,
            },
            ploc: Ploc {
                lines: {
                    256,
                    189,
                    122,
                    311,
                    244,
                    177,
                    110,
                    232,
                    165,
                    342,
                    275,
                    208,
                    263,
                    196,
                    129,
                    318,
                    184,
                    117,
                    239,
                    172,
                    294,
                    227,
                    282,
                    148,
                    337,
                    270,
                    203,
                    136,
                    325,
                    258,
                    191,
                    124,
                    313,
                    246,
                    179,
                    112,
                    301,
                    234,
                    167,
                    222,
                    277,
                    143,
                    265,
                    198,
                    131,
                    320,
                    253,
                    186,
                    119,
                    308,
                    241,
                    107,
                    296,
                    229,
                    162,
                    95,
                    284,
                    217,
                    150,
                    339,
                    272,
                    138,
                    193,
                    126,
                    181,
                    114,
                    236,
                    102,
                    291,
                    224,
                    157,
                    346,
                    279,
                    212,
                    145,
                    267,
                    133,
                    322,
                    255,
                    188,
                    121,
                    310,
                    243,
                    176,
                    231,
                    164,
                    97,
                    219,
                    152,
                    274,
                    207,
                    140,
                    329,
                    262,
                    317,
                    250,
                    183,
                    305,
                    238,
                    171,
                    104,
                    293,
                    226,
                    348,
                    214,
                    147,
                    336,
                    269,
                    202,
                    135,
                    123,
                    312,
                    245,
                    178,
                    166,
                    221,
                    343,
                    276,
                    209,
                    142,
                    264,
                    197,
                    130,
                    252,
                    118,
                    307,
                    240,
                    173,
                    106,
                    295,
                    228,
                    283,
                    216,
                    149,
                    338,
                    271,
                    204,
                    326,
                    259,
                    192,
                    125,
                    247,
                    180,
                    302,
                    235,
                    168,
                    290,
                    223,
                    156,
                    345,
                    278,
                    211,
                    266,
                    199,
                    132,
                    321,
                    187,
                    242,
                    175,
                    108,
                    297,
                    163,
                    218,
                    273,
                    206,
                    139,
                    328,
                    261,
                    194,
                    127,
                    316,
                    249,
                    182,
                    115,
                    304,
                    237,
                    170,
                    103,
                    292,
                    347,
                    280,
                    213,
                    201,
                    134,
                    323,
                },
                ploc_min: 185,
                ploc_max: 185,
            },
            cloc: Cloc {
                only_comment_lines: 126,
                code_comment_lines: 1,
                comment_line_end: Some(
                    341,
                ),
                cloc_min: 127,
                cloc_max: 127,
            },
            lloc: Lloc {
                logical_lines: 0,
                lloc_min: 0,
                lloc_max: 0,
            },
            space_count: 1,
            blank_min: 38,
            blank_max: 38,
        },
        nom: Stats {
            functions: 0,
            closures: 0,
            functions_sum: 0,
            closures_sum: 0,
            functions_min: 0,
            functions_max: 0,
            closures_min: 0,
            closures_max: 0,
            space_count: 1,
        },
        mi: Stats {
            halstead_length: 984.000,
            halstead_vocabulary: 216.000,
            halstead_volume: 7630.809,
            cyclomatic: 1.000,
            sloc: 349.000,
            comments_percentage: 0.364,
        },
        abc: Stats {
            assignments: 0.000,
            assignments_sum: 0.000,
            assignments_min: 0.000,
            assignments_max: 0.000,
            branches: 0.000,
            branches_sum: 0.000,
            branches_min: 0.000,
            branches_max: 0.000,
            conditions: 0.000,
            conditions_sum: 0.000,
            conditions_min: 0.000,
            conditions_max: 0.000,
            space_count: 1,
            declaration: [],
        },
        wmc: Stats {
            cyclomatic: 0.000,
            class_wmc: 0.000,
            interface_wmc: 0.000,
            class_wmc_sum: 0.000,
            interface_wmc_sum: 0.000,
            space_kind: Unknown,
        },
        npm: Stats {
            class_npm: 0,
            interface_npm: 0,
            class_nm: 0,
            interface_nm: 0,
            class_npm_sum: 0,
            interface_npm_sum: 0,
            class_nm_sum: 0,
            interface_nm_sum: 0,
            is_class_space: fal,
        },
        npa: Stats {
            class_npa: 0,
            interface_npa: 0,
            class_na: 0,
            interface_na: 0,
            class_npa_sum: 0,
            interface_npa_sum: 0,
            class_na_sum: 0,
            interface_na_sum: 0,
            is_class_space: fal,
        },
    },
}
