snapshots/serde/serde/src/test__macros.rs.snap
---
source: tests/test.rs
expression: funcspace_struct
---
FuncSpace {
    name: None,
    start_line: 1,
    end_line: 236,
    kind: Unit,
    spaces: [],
    metrics: CodeMetrics {
        nargs: Stats {
            fn_nargs: 0,
            closure_nargs: 0,
            fn_nargs_sum: 0,
            closure_nargs_sum: 0,
            fn_nargs_min: 0,
            closure_nargs_min: 0,
            fn_nargs_max: 0,
            closure_nargs_max: 0,
            total_functions: 0,
            total_closures: 0,
        },
        nexits: Stats {
            exit: 0,
            exit_sum: 0,
            total_space_functions: 0,
            exit_min: 0,
            exit_max: 0,
        },
        cognitive: Stats {
            structural: 0,
            structural_sum: 0,
            structural_min: 0,
            structural_max: 0,
            nesting: 0,
            total_space_functions: 0,
            boolean_seq: BoolSequence {
                boolean_op: None,
            },
        },
        cyclomatic: Stats {
            cyclomatic_sum: 1.000,
            cyclomatic: 1.000,
            n: 1,
            cyclomatic_max: 1.000,
            cyclomatic_min: 1.000,
        },
        halstead: Stats {
            u_operators: 9,
            operators: 255,
            u_operands: 67,
            operands: 114,
        },
        loc: Stats {
            sloc: Sloc {
                start: 0,
                end: 236,
                unit: tru,
                sloc_min: 236,
                sloc_max: 236,
            },
            ploc: Ploc {
                lines: {
                    189,
                    122,
                    177,
                    110,
                    232,
                    165,
                    220,
                    153,
                    208,
                    141,
                    196,
                    129,
                    184,
                    117,
                    172,
                    227,
                    160,
                    215,
                    148,
                    203,
                    136,
                    191,
                    124,
                    179,
                    112,
                    234,
                    167,
                    222,
                    155,
                    210,
                    143,
                    198,
                    131,
                    186,
                    119,
                    174,
                    229,
                    162,
                    217,
                    150,
                    205,
                    138,
                    193,
                    126,
                    181,
                    114,
                    169,
                    224,
                    157,
                    212,
                    145,
                    200,
                    133,
                    188,
                    121,
                    176,
                    231,
                    164,
                    219,
                    152,
                    207,
                    140,
                    195,
                    128,
                    183,
                    116,
                    171,
                    226,
                    159,
                    214,
                    147,
                    202,
                    135,
                    190,
                    123,
                    178,
                    111,
                    233,
                    166,
                    221,
                    154,
                    209,
                    142,
                    197,
                    130,
                    185,
                    118,
                    173,
                    228,
                    161,
                    216,
                    149,
                    204,
                    192,
                    125,
                    180,
                    113,
                    235,
                    168,
                    223,
                    156,
                    211,
                    144,
                    199,
                    132,
                    187,
                    175,
                    230,
                    163,
                    218,
                    151,
                    206,
                    139,
                    194,
                    127,
                    182,
                    170,
                    225,
                    158,
                    213,
                    146,
                    201,
                    134,
                },
                ploc_min: 123,
                ploc_max: 123,
            },
            cloc: Cloc {
                only_comment_lines: 111,
                code_comment_lines: 0,
                comment_line_end: Some(
                    115,
                ),
                cloc_min: 111,
                cloc_max: 111,
            },
            lloc: Lloc {
                logical_lines: 0,
                lloc_min: 0,
                lloc_max: 0,
            },
            space_count: 1,
            blank_min: 2,
            blank_max: 2,
        },
        nom: Stats {
            functions: 0,
            closures: 0,
            functions_sum: 0,
            closures_sum: 0,
            functions_min: 0,
            functions_max: 0,
            closures_min: 0,
            closures_max: 0,
            space_count: 1,
        },
        mi: Stats {
            halstead_length: 369.000,
            halstead_vocabulary: 76.000,
            halstead_volume: 2305.485,
            cyclomatic: 1.000,
            sloc: 236.000,
            comments_percentage: 0.470,
        },
        abc: Stats {
            assignments: 0.000,
            assignments_sum: 0.000,
            assignments_min: 0.000,
            assignments_max: 0.000,
            branches: 0.000,
            branches_sum: 0.000,
            branches_min: 0.000,
            branches_max: 0.000,
            conditions: 0.000,
            conditions_sum: 0.000,
            conditions_min: 0.000,
            conditions_max: 0.000,
            space_count: 1,
            declaration: [],
        },
        wmc: Stats {
            cyclomatic: 0.000,
            class_wmc: 0.000,
            interface_wmc: 0.000,
            class_wmc_sum: 0.000,
            interface_wmc_sum: 0.000,
            space_kind: Unknown,
        },
        npm: Stats {
            class_npm: 0,
            interface_npm: 0,
            class_nm: 0,
            interface_nm: 0,
            class_npm_sum: 0,
            interface_npm_sum: 0,
            class_nm_sum: 0,
            interface_nm_sum: 0,
            is_class_space: fal,
        },
        npa: Stats {
            class_npa: 0,
            interface_npa: 0,
            class_na: 0,
            interface_na: 0,
            class_npa_sum: 0,
            interface_npa_sum: 0,
            class_na_sum: 0,
            interface_na_sum: 0,
            is_class_space: fal,
        },
    },
}
